--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+.hero {
+  background-image: url('/public/img/bg-hero.jpg');
+  position: relative;
+}
+
+.hero::before {
+  content: '';
+  opacity: 0.3;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+}
+
 .input, .select, .radio, .textarea {
   @apply shadow-inner;
 }
