--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,12 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-.hero {
+.hero, .bg-guest {
   background-image: url('/public/img/bg-hero.jpg');
   position: relative;
 }
 
-.hero::before {
+.hero::before, .bg-guest::before {
   content: '';
   opacity: 0.3;
   position: absolute;
@@ -16,6 +16,10 @@
   width: 100%;
   height: 100%;
   background-color: #000;
+}
+
+.bg-guest::before {
+  opacity: 0.5;
 }
 
 .input, .select, .radio, .textarea {
